--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "hermes-javascript": "^0.3.11",
-    "ini": "^1.3.5"
+    "ini": "^1.3.5",
+    "node-fetch": "^2.6.0"
   },
   "repository": {
     "type": "git",
