--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "hermes-javascript": "^0.3.11",
         "ini": "^1.3.5",
         "node-fetch": "^2.6.0",
-        "mqtt": "^2.18.0",
-        "picotts": "^0.1.1"
+        "mqtt": "^2.18.0"
     },
     "repository": {
         "type": "git",
