--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "hermes-javascript": "^0.3.11",
         "ini": "^1.3.5",
         "mqtt": "^2.18.0",
-        "node-fetch": "^2.6.0",
+        "node-fetch": "^2.6.0"
     },
     "repository": {
         "type": "git",
